--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,17 +12,20 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.9",
     "@types/debug": "4.1.7",
     "@types/uuid": "^8.3.4",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
     "sass": "^1.55.0",
     "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.7.4",
     "vite": "^3.1.2"
   },
   "dependencies": {
     "@tt5/prototypes": "workspace:*",
     "@tt5/types": "workspace:*",
-    "colord": "^2.9.3",
     "color-blend": "^4.0.0",
+    "colord": "^2.9.3",
     "debug": "^4.3.4",
     "lib0": "^0.2.52",
     "pixi.js": "^7.0.4",
