refactor: update server, protos

--- a/packages/prototypes/tsconfig.json
+++ b/packages/prototypes/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "target": "es2018"
   },
-  "include": ["out-ts"],
+  "include": ["protos"],
   "exclude": ["node_modules"]
 }
