--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "engines": {
     "node": ">=16",
-    "pnpm": "^7.0.0"
+    "pnpm": ">=7.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.1",
@@ -25,7 +25,6 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-svelte3": "^4.0.0",
     "prettier": "^2.8.2",
-    "prettier-plugin-svelte": "^2.9.0",
-    "ts-node": "^10.9.1"
+    "prettier-plugin-svelte": "^2.9.0"
   }
 }
