--- a/packages/prototypes/package.json
+++ b/packages/prototypes/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@tt5/prototypes",
   "version": "0.0.1",
+  "private": true,
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "type": "module",
@@ -13,27 +14,18 @@
     }
   },
   "scripts": {
-    "gen": "ts-node --esm ./scripts/build.ts",
     "build": "rimraf dist && rollup -c",
     "watch": "rimraf dist && rollup -cw"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
-    "fast-glob": "^3.2.12",
     "rimraf": "^3.0.2",
     "rollup": "^3.10.0",
     "rollup-plugin-typescript2": "^0.34.1",
-    "ts-node": "^10.9.1",
     "ts-proto": "^1.138.0",
     "typescript": "4.9.4"
   },
   "dependencies": {
     "protobufjs": "^7.1.2"
-  },
-  "files": [
-    "dist"
-  ],
-  "publishConfig": {
-    "access": "public"
   }
 }
