--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.6.18", features = ["ws"] }
+axum = { version = "0.6.18", features = ["tracing", "ws"] }
 env_logger = { version = "0.9.1" }
 futures-util = { version = "0.3.24" }
 hmac = "0.12.1"
@@ -20,7 +20,7 @@ sha2 = "0.10.6"
 tic-tac-5 = { path = "../tic-tac-5" }
 tokio = { version = "1.21.2", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
-tower-http = { version = "0.4", features = ["trace", "util"] }
+tower-http = { version = "0.4", features = ["cors", "trace", "util"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 uuid = { version = "1.1.2", features = [
