--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.6.18", features = ["tracing", "ws"] }
+chrono = { version = "0.4.23", features = ["serde"] }
 env_logger = { version = "0.9.1" }
 futures-util = { version = "0.3.24" }
 hmac = "0.12.1"
