--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-svelte3": "^4.0.0",
     "prettier": "^2.8.2",
-    "prettier-plugin-svelte": "^2.9.0"
+    "prettier-plugin-svelte": "^2.9.0",
+    "typescript": "4.9.4"
   }
 }
