--- a/packages/prototypes/package.json
+++ b/packages/prototypes/package.json
@@ -22,8 +22,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^3.10.0",
     "rollup-plugin-typescript2": "^0.34.1",
-    "ts-proto": "^1.138.0",
-    "typescript": "4.9.4"
+    "ts-proto": "^1.138.0"
   },
   "dependencies": {
     "protobufjs": "^7.1.2"
