--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -16,8 +16,7 @@
   "devDependencies": {
     "rimraf": "^3.0.2",
     "rollup": "^3.10.0",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "typescript": "4.9.4"
+    "rollup-plugin-typescript2": "^0.34.1"
   },
   "files": [
     "dist",
