--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -20,6 +20,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
 
+      - name: Test Rust crates
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
