refactor: update Dockerfile, add .env-example

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,12 @@
+AWS_ACCESS_KEY_ID=x
+AWS_SECRET_ACCESS_KEY=x
+AWS_REGION=eu-central-1
+
+AWS_ACCOUNT_ID=626386600593
+AWS_REGION=eu-central-1
+ECR_REPOSITORY=tic-tac-5
+IMAGE_PATH=./crates/server/Dockerfile
+VERSION=0.1.0
+
 JWT_SECRET=very-secret
-RUST_LOG=server=info
+RUST_LOG=server=trace
