--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -50,8 +50,15 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Build worker image and push it to Docker registry
-        run: ./ex.sh docker:push
+      - name: Build docker image and push it to Docker registry
+        run: |
+          VERSION=$(cat crates/server/Cargo.toml | grep version | awk -F'[ "]' 'NR==1{print $4}') \
+          ./ex.sh docker:push
+        env:
+          AWS_ACCOUNT_ID: 626386600593
+          AWS_REGION: eu-central-1
+          ECR_REPOSITORY: tic-tac-5
+          IMAGE_PATH: ./crates/server/Dockerfile
 
   deploy:
     needs: push_to_registry
