--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -19,12 +19,14 @@
     "svelte-check": "^3.0.2",
     "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.2.4",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vite-plugin-wasm": "^3.2.2"
   },
   "dependencies": {
     "@tt5/prototypes": "workspace:*",
     "@tt5/types": "workspace:*",
     "debug": "^4.3.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "wasm": "workspace:*"
   }
 }
