--- a/crates/wasm/Cargo.toml
+++ b/crates/wasm/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 js-sys = "0.3.64"
 wasm-bindgen = "0.2.87"
+web-sys = { version = "0.3.64", features = ["Performance", "Window"]}
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
