fix ci update WS_URL

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build the GitHub pages distribution
         run: pnpm --filter client build
         env:
-          VITE_WS_URL: wss://tic-tac-5-api.fly.dev/
+          VITE_WS_URL: wss://api.teemukoivisto.xyz/tic-tac-5/ws
           VITE_API_URL: https://api.teemukoivisto.xyz/tic-tac-5
 
       - name: Publish to Cloudflare Pages
